--- a/frontend/components/revisions/css/revisions.css
+++ b/frontend/components/revisions/css/revisions.css
@@ -7,7 +7,7 @@ revisions {
     text-shadow: 1px 1px#666666;
     font-size: 14px;
     width: 250px;
-    top: 65px;
+    top: 60px;
     left: 50%;
     font-weight: bold;
     margin-left: -125px;
